infrastructure/traefik/traefik-web-ui.yaml
# Declaring the user list
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-auth
  namespace: voxel-infra
spec:
  basicAuth:
    secret: authsecret

---
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: voxel-infra
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.vobis.io`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
      - name: test-auth
